# deepseek-v4-h100

./: .gitignore  AGENTS.md  Dockerfile  README.md  launch_h100.sh  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
.agents/: README.md  settings.json
.agents/agents/: architect.md  debugger.md  executor.md  perf-optimizer.md  qa.md  reviewer.md  security-auditor.md
.agents/commands/: agent-create.md  branch.md  code-review.md  commit.md  dwp-create.md  dwp-execute.md  dwp-refine.md  dwp-resume.md  dwp-status.md  dwp-verify.md  pr.md  skill-create.md
.agents/docs/: COMMANDS_REFERENCE.md  skills_agents_catalog.md
.agents/skills/: deepworkplan.md  test-harness.md  verify.md
.claude/retrospectives/: 2026-07-19-claude-code-rules-format.md  2026-07-19-deepseek-v4-h100-wsl2-plan.md  2026-07-19-unit-test-fix.md
.claude/rules/: general.md  performance.md
analysis_results/: EXECUTIVE_REPORT.md  SECURITY_REVIEW.md  SKILLS_AGENTS_DISCOVERY.md
configs/: README.md  agent.yaml  batching.yaml  kv_cache.yaml  model.h100.yaml  model.yaml  scheduler.yaml
docs/: AI_AGENT_COLLAB.md  AI_AGENT_ONBOARDING.md  ARCHITECTURE.md  CODE_QUALITY_REPORT.md  DEVELOPMENT_COMMANDS.md  LOCAL_DEV_PLAN.md  PRODUCT_SPEC.md  README.md  REPRODUCTION.md  SECURITY.md  STANDARDS.md  TESTING_GUIDE.md  VALIDATION.md  competition-document.md  docker-compose.local.yml  implementation-plan-local-dev.md  original-requirements.md
src/: README.md  inference_engine.md  kv_cache_manager.md  main.py  metrics_exporter.md  scheduler.md
tests/: README.md  benchmark_swe.py
(+41 files in other folders)
